--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </nav>
-    <!--<a class="header-button" href="#search">Хочу сюда!</a> либо включить в список выше-->
+    <a class="header-button" href="#search">Хочу сюда!</a> либо включить в список выше
   </header>
   <main class="main-index">
     <section class="welcome-sedona">
